Fix social media icons alignment and remove unnecessary CSS.

--- a/src/components/Socials/Socials.css
+++ b/src/components/Socials/Socials.css
@@ -37,7 +37,7 @@
   display: inline-block;
   text-decoration: none;
   font-size: 1.5rem;
-  height: 25px;
+
   color: var(--titles);
 }
 .btn-cv svg{
